--- a/views/user/editprofile.ejs
+++ b/views/user/editprofile.ejs
@@ -1,4 +1,4 @@
-
+<!-- 
 <%- include('../htmlbody/header') -%>
 <%- include('../htmlbody/navbar') -%>
 <div class="container rounded bg-white mt-5 mb-5">
@@ -49,4 +49,4 @@ picholder.src=pic
 }
 
 
-</script>
+</script> -->
