--- a/views/user/editaddress.ejs
+++ b/views/user/editaddress.ejs
@@ -1,7 +1,7 @@
 
     <%- include('../htmlbody/header') -%>
     <%- include('../htmlbody/navbar') -%>
-    <div class="container rounded bg-white mt-5 mb-5">
+    <!-- <div class="container rounded bg-white mt-5 mb-5">
     <div class="row">
     <div class="col-md-3 border-right">
     <div class="d-flex flex-column align-items-center text-center p-3 py-5"><img class="rounded-circle mt-5" width="150px" src="https://st3.depositphotos.com/15648834/17930/v/600/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg"><span class="font-weight-bold">Edogaru</span><span class="text-black-50">edogaru@mail.com.my</span><span> </span></div>
@@ -50,7 +50,7 @@
     </div>
     </div>
     </div>
-    </div>
+    </div> -->
 
     <%- include('../htmlbody/bootsfooter') -%>
     <%- include('../htmlbody/footer') -%> 
