--- a/views/user/successorder.ejs
+++ b/views/user/successorder.ejs
@@ -1,11 +1,15 @@
 <%- include('../htmlbody/header') -%>
 <div class="container">
+  <div class="row">
+
+
   <div class="col-7 m-auto">
     <img
       class="img-fluid"
       src="https://cdn.dribbble.com/users/147386/screenshots/5315437/success-tick-dribbble.gif"
       alt=""
     />
+  </div>
   </div>
   <h3 class="text-center" style="color: green">Order Success</h3>
 </div>
