--- a/views/user/wishlist.ejs
+++ b/views/user/wishlist.ejs
@@ -15,7 +15,7 @@
       <hr class="my-4" />
       <% for( let index = 0; index < wishlistProducts.length; index++ ) { %>
       <div class="row">
-      <div class="col-lg-3 col-md-12 col-4 mb-4 mb-lg-0">
+      <div class="col-lg-3 col-md-6 col-sm-5 col-8 mb-4 mb-lg-0">
       <div class="bg-image hover-overlay hover-zoom ripple rounded" data-mdb-ripple-color="light">
       <img src="<%= locals.wishlistProducts[index].imageUrl[0] %>"
       class="w-100" />
@@ -26,7 +26,7 @@
 
       </div>
 
-      <div class="col-4 col-lg-5 col-md-6 mb-4 mb-lg-0">
+      <div class="col-10  col-lg-5 col-sm-6 col-md-4 mb-4 mb-lg-0">
       <!--  -->
       <p><strong> <%= locals.wishlistProducts[index].name  %></strong></p>
       <p><%= locals.wishlistProducts[index].price  %></p>
@@ -35,7 +35,7 @@
 
       </div>
 
-      <div class=" col-sm-3 m-auto">
+      <div class="col-10 col-sm-3 m-auto">
       <a href="/removeWishlist/<%= locals.wishlistProducts[index]._id%>/<%= [index]%>">
       <button type="button" class="btn btn-danger btn-sm me-1 mb-2"><i class="fa-solid fa-trash"></i></button></a>
      
